alignment issue fixed in ledger

--- a/app/webapp/Globals/css/style2.css
+++ b/app/webapp/Globals/css/style2.css
@@ -650,9 +650,12 @@ input[type="checkbox"]:after {
     background: #48d076;
     border: 0;
 }
+.switch.checked small {
+    left: 20px;
+}
 .switch small {
-    top: 2px;
-    left: 3px;
+    top: 0px;
+    left: 0px;
 }
 .switch.wide small {
     height: 29px;
